// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should Render Expense Form correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseForm />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "",
        <form
          onSubmit={[Function]}
        >
          <input
            autoFocus={true}
            onChange={[Function]}
            placeholder="Description"
            type="text"
            value=""
          />
          <input
            onChange={[Function]}
            placeholder="Amount"
            type="number"
            value=""
          />
          <withStyles(SingleDatePicker)
            anchorDirection="left"
            appendToBody={false}
            block={false}
            calendarInfoPosition="bottom"
            customCloseIcon={null}
            customInputIcon={null}
            date={"2019-04-12T19:55:33.834Z"}
            daySize={39}
            disableScroll={false}
            disabled={false}
            displayFormat={[Function]}
            enableOutsideDays={false}
            firstDayOfWeek={null}
            focused={false}
            hideKeyboardShortcutsPanel={false}
            horizontalMargin={0}
            horizontalMonthPadding={13}
            id="date"
            initialVisibleMonth={null}
            inputIconPosition="before"
            isDayBlocked={[Function]}
            isDayHighlighted={[Function]}
            isOutsideRange={[Function]}
            isRTL={false}
            keepFocusOnInput={false}
            keepOpenOnDateSelect={false}
            monthFormat="MMMM YYYY"
            navNext={null}
            navPrev={null}
            noBorder={false}
            numberOfMonths={1}
            onClose={[Function]}
            onDateChange={[Function]}
            onFocusChange={[Function]}
            onNextMonthClick={[Function]}
            onPrevMonthClick={[Function]}
            openDirection="down"
            orientation="horizontal"
            phrases={
              Object {
                "calendarLabel": "Calendar",
                "chooseAvailableDate": [Function],
                "clearDate": "Clear Date",
                "closeDatePicker": "Close",
                "dateIsSelected": [Function],
                "dateIsUnavailable": [Function],
                "enterKey": "Enter key",
                "escape": "Escape key",
                "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                "homeEnd": "Home and end keys",
                "jumpToNextMonth": "Move forward to switch to the next month.",
                "jumpToPrevMonth": "Move backward to switch to the previous month.",
                "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                "keyboardShortcuts": "Keyboard Shortcuts",
                "leftArrowRightArrow": "Right and left arrow keys",
                "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                "moveFocusByOneMonth": "Switch months.",
                "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                "openThisPanel": "Open this panel.",
                "pageUpPageDown": "page up and page down keys",
                "questionMark": "Question mark",
                "returnFocusToInput": "Return to the date input field.",
                "selectFocusedDate": "Select the date in focus.",
                "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                "upArrowDownArrow": "up and down arrow keys",
              }
            }
            placeholder="Date"
            readOnly={false}
            regular={false}
            renderCalendarInfo={null}
            renderDayContents={null}
            renderMonthElement={null}
            renderMonthText={null}
            reopenPickerOnClearDate={false}
            required={false}
            screenReaderInputMessage=""
            showClearDate={false}
            showDefaultInputIcon={false}
            small={false}
            verticalHeight={null}
            verticalSpacing={22}
            weekDayFormat="dd"
            withFullScreenPortal={false}
            withPortal={false}
          />
          <br />
          <textarea
            onChange={[Function]}
            placeholder="Add a note for your expense(optional)"
            value=""
          />
          <button>
            AddExpense
          </button>
        </form>,
      ],
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              autoFocus={true}
              onChange={[Function]}
              placeholder="Description"
              type="text"
              value=""
            />,
            <input
              onChange={[Function]}
              placeholder="Amount"
              type="number"
              value=""
            />,
            <withStyles(SingleDatePicker)
              anchorDirection="left"
              appendToBody={false}
              block={false}
              calendarInfoPosition="bottom"
              customCloseIcon={null}
              customInputIcon={null}
              date={"2019-04-12T19:55:33.834Z"}
              daySize={39}
              disableScroll={false}
              disabled={false}
              displayFormat={[Function]}
              enableOutsideDays={false}
              firstDayOfWeek={null}
              focused={false}
              hideKeyboardShortcutsPanel={false}
              horizontalMargin={0}
              horizontalMonthPadding={13}
              id="date"
              initialVisibleMonth={null}
              inputIconPosition="before"
              isDayBlocked={[Function]}
              isDayHighlighted={[Function]}
              isOutsideRange={[Function]}
              isRTL={false}
              keepFocusOnInput={false}
              keepOpenOnDateSelect={false}
              monthFormat="MMMM YYYY"
              navNext={null}
              navPrev={null}
              noBorder={false}
              numberOfMonths={1}
              onClose={[Function]}
              onDateChange={[Function]}
              onFocusChange={[Function]}
              onNextMonthClick={[Function]}
              onPrevMonthClick={[Function]}
              openDirection="down"
              orientation="horizontal"
              phrases={
                Object {
                  "calendarLabel": "Calendar",
                  "chooseAvailableDate": [Function],
                  "clearDate": "Clear Date",
                  "closeDatePicker": "Close",
                  "dateIsSelected": [Function],
                  "dateIsUnavailable": [Function],
                  "enterKey": "Enter key",
                  "escape": "Escape key",
                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                  "homeEnd": "Home and end keys",
                  "jumpToNextMonth": "Move forward to switch to the next month.",
                  "jumpToPrevMonth": "Move backward to switch to the previous month.",
                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                  "keyboardShortcuts": "Keyboard Shortcuts",
                  "leftArrowRightArrow": "Right and left arrow keys",
                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                  "moveFocusByOneMonth": "Switch months.",
                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                  "openThisPanel": "Open this panel.",
                  "pageUpPageDown": "page up and page down keys",
                  "questionMark": "Question mark",
                  "returnFocusToInput": "Return to the date input field.",
                  "selectFocusedDate": "Select the date in focus.",
                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                  "upArrowDownArrow": "up and down arrow keys",
                }
              }
              placeholder="Date"
              readOnly={false}
              regular={false}
              renderCalendarInfo={null}
              renderDayContents={null}
              renderMonthElement={null}
              renderMonthText={null}
              reopenPickerOnClearDate={false}
              required={false}
              screenReaderInputMessage=""
              showClearDate={false}
              showDefaultInputIcon={false}
              small={false}
              verticalHeight={null}
              verticalSpacing={22}
              weekDayFormat="dd"
              withFullScreenPortal={false}
              withPortal={false}
            />,
            <br />,
            <textarea
              onChange={[Function]}
              placeholder="Add a note for your expense(optional)"
              value=""
            />,
            <button>
              AddExpense
            </button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoFocus": true,
              "onChange": [Function],
              "placeholder": "Description",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "onChange": [Function],
              "placeholder": "Amount",
              "type": "number",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "anchorDirection": "left",
              "appendToBody": false,
              "block": false,
              "calendarInfoPosition": "bottom",
              "customCloseIcon": null,
              "customInputIcon": null,
              "date": "2019-04-12T19:55:33.834Z",
              "dayAriaLabelFormat": undefined,
              "daySize": 39,
              "disableScroll": false,
              "disabled": false,
              "displayFormat": [Function],
              "enableOutsideDays": false,
              "firstDayOfWeek": null,
              "focused": false,
              "hideKeyboardShortcutsPanel": false,
              "horizontalMargin": 0,
              "horizontalMonthPadding": 13,
              "id": "date",
              "initialVisibleMonth": null,
              "inputIconPosition": "before",
              "isDayBlocked": [Function],
              "isDayHighlighted": [Function],
              "isOutsideRange": [Function],
              "isRTL": false,
              "keepFocusOnInput": false,
              "keepOpenOnDateSelect": false,
              "monthFormat": "MMMM YYYY",
              "navNext": null,
              "navPrev": null,
              "noBorder": false,
              "numberOfMonths": 1,
              "onClose": [Function],
              "onDateChange": [Function],
              "onFocusChange": [Function],
              "onNextMonthClick": [Function],
              "onPrevMonthClick": [Function],
              "openDirection": "down",
              "orientation": "horizontal",
              "phrases": Object {
                "calendarLabel": "Calendar",
                "chooseAvailableDate": [Function],
                "clearDate": "Clear Date",
                "closeDatePicker": "Close",
                "dateIsSelected": [Function],
                "dateIsUnavailable": [Function],
                "enterKey": "Enter key",
                "escape": "Escape key",
                "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                "homeEnd": "Home and end keys",
                "jumpToNextMonth": "Move forward to switch to the next month.",
                "jumpToPrevMonth": "Move backward to switch to the previous month.",
                "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                "keyboardShortcuts": "Keyboard Shortcuts",
                "leftArrowRightArrow": "Right and left arrow keys",
                "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                "moveFocusByOneMonth": "Switch months.",
                "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                "openThisPanel": "Open this panel.",
                "pageUpPageDown": "page up and page down keys",
                "questionMark": "Question mark",
                "returnFocusToInput": "Return to the date input field.",
                "selectFocusedDate": "Select the date in focus.",
                "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                "upArrowDownArrow": "up and down arrow keys",
              },
              "placeholder": "Date",
              "readOnly": false,
              "regular": false,
              "renderCalendarDay": undefined,
              "renderCalendarInfo": null,
              "renderDayContents": null,
              "renderMonthElement": null,
              "renderMonthText": null,
              "reopenPickerOnClearDate": false,
              "required": false,
              "screenReaderInputMessage": "",
              "showClearDate": false,
              "showDefaultInputIcon": false,
              "small": false,
              "transitionDuration": undefined,
              "verticalHeight": null,
              "verticalSpacing": 22,
              "weekDayFormat": "dd",
              "withFullScreenPortal": false,
              "withPortal": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "onChange": [Function],
              "placeholder": "Add a note for your expense(optional)",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "textarea",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "AddExpense",
            },
            "ref": null,
            "rendered": "AddExpense",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "",
          <form
            onSubmit={[Function]}
          >
            <input
              autoFocus={true}
              onChange={[Function]}
              placeholder="Description"
              type="text"
              value=""
            />
            <input
              onChange={[Function]}
              placeholder="Amount"
              type="number"
              value=""
            />
            <withStyles(SingleDatePicker)
              anchorDirection="left"
              appendToBody={false}
              block={false}
              calendarInfoPosition="bottom"
              customCloseIcon={null}
              customInputIcon={null}
              date={"2019-04-12T19:55:33.834Z"}
              daySize={39}
              disableScroll={false}
              disabled={false}
              displayFormat={[Function]}
              enableOutsideDays={false}
              firstDayOfWeek={null}
              focused={false}
              hideKeyboardShortcutsPanel={false}
              horizontalMargin={0}
              horizontalMonthPadding={13}
              id="date"
              initialVisibleMonth={null}
              inputIconPosition="before"
              isDayBlocked={[Function]}
              isDayHighlighted={[Function]}
              isOutsideRange={[Function]}
              isRTL={false}
              keepFocusOnInput={false}
              keepOpenOnDateSelect={false}
              monthFormat="MMMM YYYY"
              navNext={null}
              navPrev={null}
              noBorder={false}
              numberOfMonths={1}
              onClose={[Function]}
              onDateChange={[Function]}
              onFocusChange={[Function]}
              onNextMonthClick={[Function]}
              onPrevMonthClick={[Function]}
              openDirection="down"
              orientation="horizontal"
              phrases={
                Object {
                  "calendarLabel": "Calendar",
                  "chooseAvailableDate": [Function],
                  "clearDate": "Clear Date",
                  "closeDatePicker": "Close",
                  "dateIsSelected": [Function],
                  "dateIsUnavailable": [Function],
                  "enterKey": "Enter key",
                  "escape": "Escape key",
                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                  "homeEnd": "Home and end keys",
                  "jumpToNextMonth": "Move forward to switch to the next month.",
                  "jumpToPrevMonth": "Move backward to switch to the previous month.",
                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                  "keyboardShortcuts": "Keyboard Shortcuts",
                  "leftArrowRightArrow": "Right and left arrow keys",
                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                  "moveFocusByOneMonth": "Switch months.",
                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                  "openThisPanel": "Open this panel.",
                  "pageUpPageDown": "page up and page down keys",
                  "questionMark": "Question mark",
                  "returnFocusToInput": "Return to the date input field.",
                  "selectFocusedDate": "Select the date in focus.",
                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                  "upArrowDownArrow": "up and down arrow keys",
                }
              }
              placeholder="Date"
              readOnly={false}
              regular={false}
              renderCalendarInfo={null}
              renderDayContents={null}
              renderMonthElement={null}
              renderMonthText={null}
              reopenPickerOnClearDate={false}
              required={false}
              screenReaderInputMessage=""
              showClearDate={false}
              showDefaultInputIcon={false}
              small={false}
              verticalHeight={null}
              verticalSpacing={22}
              weekDayFormat="dd"
              withFullScreenPortal={false}
              withPortal={false}
            />
            <br />
            <textarea
              onChange={[Function]}
              placeholder="Add a note for your expense(optional)"
              value=""
            />
            <button>
              AddExpense
            </button>
          </form>,
        ],
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                autoFocus={true}
                onChange={[Function]}
                placeholder="Description"
                type="text"
                value=""
              />,
              <input
                onChange={[Function]}
                placeholder="Amount"
                type="number"
                value=""
              />,
              <withStyles(SingleDatePicker)
                anchorDirection="left"
                appendToBody={false}
                block={false}
                calendarInfoPosition="bottom"
                customCloseIcon={null}
                customInputIcon={null}
                date={"2019-04-12T19:55:33.834Z"}
                daySize={39}
                disableScroll={false}
                disabled={false}
                displayFormat={[Function]}
                enableOutsideDays={false}
                firstDayOfWeek={null}
                focused={false}
                hideKeyboardShortcutsPanel={false}
                horizontalMargin={0}
                horizontalMonthPadding={13}
                id="date"
                initialVisibleMonth={null}
                inputIconPosition="before"
                isDayBlocked={[Function]}
                isDayHighlighted={[Function]}
                isOutsideRange={[Function]}
                isRTL={false}
                keepFocusOnInput={false}
                keepOpenOnDateSelect={false}
                monthFormat="MMMM YYYY"
                navNext={null}
                navPrev={null}
                noBorder={false}
                numberOfMonths={1}
                onClose={[Function]}
                onDateChange={[Function]}
                onFocusChange={[Function]}
                onNextMonthClick={[Function]}
                onPrevMonthClick={[Function]}
                openDirection="down"
                orientation="horizontal"
                phrases={
                  Object {
                    "calendarLabel": "Calendar",
                    "chooseAvailableDate": [Function],
                    "clearDate": "Clear Date",
                    "closeDatePicker": "Close",
                    "dateIsSelected": [Function],
                    "dateIsUnavailable": [Function],
                    "enterKey": "Enter key",
                    "escape": "Escape key",
                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                    "homeEnd": "Home and end keys",
                    "jumpToNextMonth": "Move forward to switch to the next month.",
                    "jumpToPrevMonth": "Move backward to switch to the previous month.",
                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                    "keyboardShortcuts": "Keyboard Shortcuts",
                    "leftArrowRightArrow": "Right and left arrow keys",
                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                    "moveFocusByOneMonth": "Switch months.",
                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                    "openThisPanel": "Open this panel.",
                    "pageUpPageDown": "page up and page down keys",
                    "questionMark": "Question mark",
                    "returnFocusToInput": "Return to the date input field.",
                    "selectFocusedDate": "Select the date in focus.",
                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                    "upArrowDownArrow": "up and down arrow keys",
                  }
                }
                placeholder="Date"
                readOnly={false}
                regular={false}
                renderCalendarInfo={null}
                renderDayContents={null}
                renderMonthElement={null}
                renderMonthText={null}
                reopenPickerOnClearDate={false}
                required={false}
                screenReaderInputMessage=""
                showClearDate={false}
                showDefaultInputIcon={false}
                small={false}
                verticalHeight={null}
                verticalSpacing={22}
                weekDayFormat="dd"
                withFullScreenPortal={false}
                withPortal={false}
              />,
              <br />,
              <textarea
                onChange={[Function]}
                placeholder="Add a note for your expense(optional)"
                value=""
              />,
              <button>
                AddExpense
              </button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "autoFocus": true,
                "onChange": [Function],
                "placeholder": "Description",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "onChange": [Function],
                "placeholder": "Amount",
                "type": "number",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "anchorDirection": "left",
                "appendToBody": false,
                "block": false,
                "calendarInfoPosition": "bottom",
                "customCloseIcon": null,
                "customInputIcon": null,
                "date": "2019-04-12T19:55:33.834Z",
                "dayAriaLabelFormat": undefined,
                "daySize": 39,
                "disableScroll": false,
                "disabled": false,
                "displayFormat": [Function],
                "enableOutsideDays": false,
                "firstDayOfWeek": null,
                "focused": false,
                "hideKeyboardShortcutsPanel": false,
                "horizontalMargin": 0,
                "horizontalMonthPadding": 13,
                "id": "date",
                "initialVisibleMonth": null,
                "inputIconPosition": "before",
                "isDayBlocked": [Function],
                "isDayHighlighted": [Function],
                "isOutsideRange": [Function],
                "isRTL": false,
                "keepFocusOnInput": false,
                "keepOpenOnDateSelect": false,
                "monthFormat": "MMMM YYYY",
                "navNext": null,
                "navPrev": null,
                "noBorder": false,
                "numberOfMonths": 1,
                "onClose": [Function],
                "onDateChange": [Function],
                "onFocusChange": [Function],
                "onNextMonthClick": [Function],
                "onPrevMonthClick": [Function],
                "openDirection": "down",
                "orientation": "horizontal",
                "phrases": Object {
                  "calendarLabel": "Calendar",
                  "chooseAvailableDate": [Function],
                  "clearDate": "Clear Date",
                  "closeDatePicker": "Close",
                  "dateIsSelected": [Function],
                  "dateIsUnavailable": [Function],
                  "enterKey": "Enter key",
                  "escape": "Escape key",
                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                  "homeEnd": "Home and end keys",
                  "jumpToNextMonth": "Move forward to switch to the next month.",
                  "jumpToPrevMonth": "Move backward to switch to the previous month.",
                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                  "keyboardShortcuts": "Keyboard Shortcuts",
                  "leftArrowRightArrow": "Right and left arrow keys",
                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                  "moveFocusByOneMonth": "Switch months.",
                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                  "openThisPanel": "Open this panel.",
                  "pageUpPageDown": "page up and page down keys",
                  "questionMark": "Question mark",
                  "returnFocusToInput": "Return to the date input field.",
                  "selectFocusedDate": "Select the date in focus.",
                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                  "upArrowDownArrow": "up and down arrow keys",
                },
                "placeholder": "Date",
                "readOnly": false,
                "regular": false,
                "renderCalendarDay": undefined,
                "renderCalendarInfo": null,
                "renderDayContents": null,
                "renderMonthElement": null,
                "renderMonthText": null,
                "reopenPickerOnClearDate": false,
                "required": false,
                "screenReaderInputMessage": "",
                "showClearDate": false,
                "showDefaultInputIcon": false,
                "small": false,
                "transitionDuration": undefined,
                "verticalHeight": null,
                "verticalSpacing": 22,
                "weekDayFormat": "dd",
                "withFullScreenPortal": false,
                "withPortal": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "onChange": [Function],
                "placeholder": "Add a note for your expense(optional)",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "AddExpense",
              },
              "ref": null,
              "rendered": "AddExpense",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`should Render Expense Form with value 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseForm
    expense={
      Object {
        "amount": 10950,
        "createdAt": 345600000,
        "description": "Credit Card",
        "id": "3",
        "note": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "",
        <form
          onSubmit={[Function]}
        >
          <input
            autoFocus={true}
            onChange={[Function]}
            placeholder="Description"
            type="text"
            value="Credit Card"
          />
          <input
            onChange={[Function]}
            placeholder="Amount"
            type="number"
            value="109.5"
          />
          <withStyles(SingleDatePicker)
            anchorDirection="left"
            appendToBody={false}
            block={false}
            calendarInfoPosition="bottom"
            customCloseIcon={null}
            customInputIcon={null}
            date={"1970-01-05T00:00:00.000Z"}
            daySize={39}
            disableScroll={false}
            disabled={false}
            displayFormat={[Function]}
            enableOutsideDays={false}
            firstDayOfWeek={null}
            focused={false}
            hideKeyboardShortcutsPanel={false}
            horizontalMargin={0}
            horizontalMonthPadding={13}
            id="date"
            initialVisibleMonth={null}
            inputIconPosition="before"
            isDayBlocked={[Function]}
            isDayHighlighted={[Function]}
            isOutsideRange={[Function]}
            isRTL={false}
            keepFocusOnInput={false}
            keepOpenOnDateSelect={false}
            monthFormat="MMMM YYYY"
            navNext={null}
            navPrev={null}
            noBorder={false}
            numberOfMonths={1}
            onClose={[Function]}
            onDateChange={[Function]}
            onFocusChange={[Function]}
            onNextMonthClick={[Function]}
            onPrevMonthClick={[Function]}
            openDirection="down"
            orientation="horizontal"
            phrases={
              Object {
                "calendarLabel": "Calendar",
                "chooseAvailableDate": [Function],
                "clearDate": "Clear Date",
                "closeDatePicker": "Close",
                "dateIsSelected": [Function],
                "dateIsUnavailable": [Function],
                "enterKey": "Enter key",
                "escape": "Escape key",
                "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                "homeEnd": "Home and end keys",
                "jumpToNextMonth": "Move forward to switch to the next month.",
                "jumpToPrevMonth": "Move backward to switch to the previous month.",
                "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                "keyboardShortcuts": "Keyboard Shortcuts",
                "leftArrowRightArrow": "Right and left arrow keys",
                "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                "moveFocusByOneMonth": "Switch months.",
                "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                "openThisPanel": "Open this panel.",
                "pageUpPageDown": "page up and page down keys",
                "questionMark": "Question mark",
                "returnFocusToInput": "Return to the date input field.",
                "selectFocusedDate": "Select the date in focus.",
                "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                "upArrowDownArrow": "up and down arrow keys",
              }
            }
            placeholder="Date"
            readOnly={false}
            regular={false}
            renderCalendarInfo={null}
            renderDayContents={null}
            renderMonthElement={null}
            renderMonthText={null}
            reopenPickerOnClearDate={false}
            required={false}
            screenReaderInputMessage=""
            showClearDate={false}
            showDefaultInputIcon={false}
            small={false}
            verticalHeight={null}
            verticalSpacing={22}
            weekDayFormat="dd"
            withFullScreenPortal={false}
            withPortal={false}
          />
          <br />
          <textarea
            onChange={[Function]}
            placeholder="Add a note for your expense(optional)"
            value=""
          />
          <button>
            AddExpense
          </button>
        </form>,
      ],
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              autoFocus={true}
              onChange={[Function]}
              placeholder="Description"
              type="text"
              value="Credit Card"
            />,
            <input
              onChange={[Function]}
              placeholder="Amount"
              type="number"
              value="109.5"
            />,
            <withStyles(SingleDatePicker)
              anchorDirection="left"
              appendToBody={false}
              block={false}
              calendarInfoPosition="bottom"
              customCloseIcon={null}
              customInputIcon={null}
              date={"1970-01-05T00:00:00.000Z"}
              daySize={39}
              disableScroll={false}
              disabled={false}
              displayFormat={[Function]}
              enableOutsideDays={false}
              firstDayOfWeek={null}
              focused={false}
              hideKeyboardShortcutsPanel={false}
              horizontalMargin={0}
              horizontalMonthPadding={13}
              id="date"
              initialVisibleMonth={null}
              inputIconPosition="before"
              isDayBlocked={[Function]}
              isDayHighlighted={[Function]}
              isOutsideRange={[Function]}
              isRTL={false}
              keepFocusOnInput={false}
              keepOpenOnDateSelect={false}
              monthFormat="MMMM YYYY"
              navNext={null}
              navPrev={null}
              noBorder={false}
              numberOfMonths={1}
              onClose={[Function]}
              onDateChange={[Function]}
              onFocusChange={[Function]}
              onNextMonthClick={[Function]}
              onPrevMonthClick={[Function]}
              openDirection="down"
              orientation="horizontal"
              phrases={
                Object {
                  "calendarLabel": "Calendar",
                  "chooseAvailableDate": [Function],
                  "clearDate": "Clear Date",
                  "closeDatePicker": "Close",
                  "dateIsSelected": [Function],
                  "dateIsUnavailable": [Function],
                  "enterKey": "Enter key",
                  "escape": "Escape key",
                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                  "homeEnd": "Home and end keys",
                  "jumpToNextMonth": "Move forward to switch to the next month.",
                  "jumpToPrevMonth": "Move backward to switch to the previous month.",
                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                  "keyboardShortcuts": "Keyboard Shortcuts",
                  "leftArrowRightArrow": "Right and left arrow keys",
                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                  "moveFocusByOneMonth": "Switch months.",
                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                  "openThisPanel": "Open this panel.",
                  "pageUpPageDown": "page up and page down keys",
                  "questionMark": "Question mark",
                  "returnFocusToInput": "Return to the date input field.",
                  "selectFocusedDate": "Select the date in focus.",
                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                  "upArrowDownArrow": "up and down arrow keys",
                }
              }
              placeholder="Date"
              readOnly={false}
              regular={false}
              renderCalendarInfo={null}
              renderDayContents={null}
              renderMonthElement={null}
              renderMonthText={null}
              reopenPickerOnClearDate={false}
              required={false}
              screenReaderInputMessage=""
              showClearDate={false}
              showDefaultInputIcon={false}
              small={false}
              verticalHeight={null}
              verticalSpacing={22}
              weekDayFormat="dd"
              withFullScreenPortal={false}
              withPortal={false}
            />,
            <br />,
            <textarea
              onChange={[Function]}
              placeholder="Add a note for your expense(optional)"
              value=""
            />,
            <button>
              AddExpense
            </button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoFocus": true,
              "onChange": [Function],
              "placeholder": "Description",
              "type": "text",
              "value": "Credit Card",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "onChange": [Function],
              "placeholder": "Amount",
              "type": "number",
              "value": "109.5",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "anchorDirection": "left",
              "appendToBody": false,
              "block": false,
              "calendarInfoPosition": "bottom",
              "customCloseIcon": null,
              "customInputIcon": null,
              "date": "1970-01-05T00:00:00.000Z",
              "dayAriaLabelFormat": undefined,
              "daySize": 39,
              "disableScroll": false,
              "disabled": false,
              "displayFormat": [Function],
              "enableOutsideDays": false,
              "firstDayOfWeek": null,
              "focused": false,
              "hideKeyboardShortcutsPanel": false,
              "horizontalMargin": 0,
              "horizontalMonthPadding": 13,
              "id": "date",
              "initialVisibleMonth": null,
              "inputIconPosition": "before",
              "isDayBlocked": [Function],
              "isDayHighlighted": [Function],
              "isOutsideRange": [Function],
              "isRTL": false,
              "keepFocusOnInput": false,
              "keepOpenOnDateSelect": false,
              "monthFormat": "MMMM YYYY",
              "navNext": null,
              "navPrev": null,
              "noBorder": false,
              "numberOfMonths": 1,
              "onClose": [Function],
              "onDateChange": [Function],
              "onFocusChange": [Function],
              "onNextMonthClick": [Function],
              "onPrevMonthClick": [Function],
              "openDirection": "down",
              "orientation": "horizontal",
              "phrases": Object {
                "calendarLabel": "Calendar",
                "chooseAvailableDate": [Function],
                "clearDate": "Clear Date",
                "closeDatePicker": "Close",
                "dateIsSelected": [Function],
                "dateIsUnavailable": [Function],
                "enterKey": "Enter key",
                "escape": "Escape key",
                "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                "homeEnd": "Home and end keys",
                "jumpToNextMonth": "Move forward to switch to the next month.",
                "jumpToPrevMonth": "Move backward to switch to the previous month.",
                "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                "keyboardShortcuts": "Keyboard Shortcuts",
                "leftArrowRightArrow": "Right and left arrow keys",
                "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                "moveFocusByOneMonth": "Switch months.",
                "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                "openThisPanel": "Open this panel.",
                "pageUpPageDown": "page up and page down keys",
                "questionMark": "Question mark",
                "returnFocusToInput": "Return to the date input field.",
                "selectFocusedDate": "Select the date in focus.",
                "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                "upArrowDownArrow": "up and down arrow keys",
              },
              "placeholder": "Date",
              "readOnly": false,
              "regular": false,
              "renderCalendarDay": undefined,
              "renderCalendarInfo": null,
              "renderDayContents": null,
              "renderMonthElement": null,
              "renderMonthText": null,
              "reopenPickerOnClearDate": false,
              "required": false,
              "screenReaderInputMessage": "",
              "showClearDate": false,
              "showDefaultInputIcon": false,
              "small": false,
              "transitionDuration": undefined,
              "verticalHeight": null,
              "verticalSpacing": 22,
              "weekDayFormat": "dd",
              "withFullScreenPortal": false,
              "withPortal": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "onChange": [Function],
              "placeholder": "Add a note for your expense(optional)",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "textarea",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "AddExpense",
            },
            "ref": null,
            "rendered": "AddExpense",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "",
          <form
            onSubmit={[Function]}
          >
            <input
              autoFocus={true}
              onChange={[Function]}
              placeholder="Description"
              type="text"
              value="Credit Card"
            />
            <input
              onChange={[Function]}
              placeholder="Amount"
              type="number"
              value="109.5"
            />
            <withStyles(SingleDatePicker)
              anchorDirection="left"
              appendToBody={false}
              block={false}
              calendarInfoPosition="bottom"
              customCloseIcon={null}
              customInputIcon={null}
              date={"1970-01-05T00:00:00.000Z"}
              daySize={39}
              disableScroll={false}
              disabled={false}
              displayFormat={[Function]}
              enableOutsideDays={false}
              firstDayOfWeek={null}
              focused={false}
              hideKeyboardShortcutsPanel={false}
              horizontalMargin={0}
              horizontalMonthPadding={13}
              id="date"
              initialVisibleMonth={null}
              inputIconPosition="before"
              isDayBlocked={[Function]}
              isDayHighlighted={[Function]}
              isOutsideRange={[Function]}
              isRTL={false}
              keepFocusOnInput={false}
              keepOpenOnDateSelect={false}
              monthFormat="MMMM YYYY"
              navNext={null}
              navPrev={null}
              noBorder={false}
              numberOfMonths={1}
              onClose={[Function]}
              onDateChange={[Function]}
              onFocusChange={[Function]}
              onNextMonthClick={[Function]}
              onPrevMonthClick={[Function]}
              openDirection="down"
              orientation="horizontal"
              phrases={
                Object {
                  "calendarLabel": "Calendar",
                  "chooseAvailableDate": [Function],
                  "clearDate": "Clear Date",
                  "closeDatePicker": "Close",
                  "dateIsSelected": [Function],
                  "dateIsUnavailable": [Function],
                  "enterKey": "Enter key",
                  "escape": "Escape key",
                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                  "homeEnd": "Home and end keys",
                  "jumpToNextMonth": "Move forward to switch to the next month.",
                  "jumpToPrevMonth": "Move backward to switch to the previous month.",
                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                  "keyboardShortcuts": "Keyboard Shortcuts",
                  "leftArrowRightArrow": "Right and left arrow keys",
                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                  "moveFocusByOneMonth": "Switch months.",
                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                  "openThisPanel": "Open this panel.",
                  "pageUpPageDown": "page up and page down keys",
                  "questionMark": "Question mark",
                  "returnFocusToInput": "Return to the date input field.",
                  "selectFocusedDate": "Select the date in focus.",
                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                  "upArrowDownArrow": "up and down arrow keys",
                }
              }
              placeholder="Date"
              readOnly={false}
              regular={false}
              renderCalendarInfo={null}
              renderDayContents={null}
              renderMonthElement={null}
              renderMonthText={null}
              reopenPickerOnClearDate={false}
              required={false}
              screenReaderInputMessage=""
              showClearDate={false}
              showDefaultInputIcon={false}
              small={false}
              verticalHeight={null}
              verticalSpacing={22}
              weekDayFormat="dd"
              withFullScreenPortal={false}
              withPortal={false}
            />
            <br />
            <textarea
              onChange={[Function]}
              placeholder="Add a note for your expense(optional)"
              value=""
            />
            <button>
              AddExpense
            </button>
          </form>,
        ],
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                autoFocus={true}
                onChange={[Function]}
                placeholder="Description"
                type="text"
                value="Credit Card"
              />,
              <input
                onChange={[Function]}
                placeholder="Amount"
                type="number"
                value="109.5"
              />,
              <withStyles(SingleDatePicker)
                anchorDirection="left"
                appendToBody={false}
                block={false}
                calendarInfoPosition="bottom"
                customCloseIcon={null}
                customInputIcon={null}
                date={"1970-01-05T00:00:00.000Z"}
                daySize={39}
                disableScroll={false}
                disabled={false}
                displayFormat={[Function]}
                enableOutsideDays={false}
                firstDayOfWeek={null}
                focused={false}
                hideKeyboardShortcutsPanel={false}
                horizontalMargin={0}
                horizontalMonthPadding={13}
                id="date"
                initialVisibleMonth={null}
                inputIconPosition="before"
                isDayBlocked={[Function]}
                isDayHighlighted={[Function]}
                isOutsideRange={[Function]}
                isRTL={false}
                keepFocusOnInput={false}
                keepOpenOnDateSelect={false}
                monthFormat="MMMM YYYY"
                navNext={null}
                navPrev={null}
                noBorder={false}
                numberOfMonths={1}
                onClose={[Function]}
                onDateChange={[Function]}
                onFocusChange={[Function]}
                onNextMonthClick={[Function]}
                onPrevMonthClick={[Function]}
                openDirection="down"
                orientation="horizontal"
                phrases={
                  Object {
                    "calendarLabel": "Calendar",
                    "chooseAvailableDate": [Function],
                    "clearDate": "Clear Date",
                    "closeDatePicker": "Close",
                    "dateIsSelected": [Function],
                    "dateIsUnavailable": [Function],
                    "enterKey": "Enter key",
                    "escape": "Escape key",
                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                    "homeEnd": "Home and end keys",
                    "jumpToNextMonth": "Move forward to switch to the next month.",
                    "jumpToPrevMonth": "Move backward to switch to the previous month.",
                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                    "keyboardShortcuts": "Keyboard Shortcuts",
                    "leftArrowRightArrow": "Right and left arrow keys",
                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                    "moveFocusByOneMonth": "Switch months.",
                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                    "openThisPanel": "Open this panel.",
                    "pageUpPageDown": "page up and page down keys",
                    "questionMark": "Question mark",
                    "returnFocusToInput": "Return to the date input field.",
                    "selectFocusedDate": "Select the date in focus.",
                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                    "upArrowDownArrow": "up and down arrow keys",
                  }
                }
                placeholder="Date"
                readOnly={false}
                regular={false}
                renderCalendarInfo={null}
                renderDayContents={null}
                renderMonthElement={null}
                renderMonthText={null}
                reopenPickerOnClearDate={false}
                required={false}
                screenReaderInputMessage=""
                showClearDate={false}
                showDefaultInputIcon={false}
                small={false}
                verticalHeight={null}
                verticalSpacing={22}
                weekDayFormat="dd"
                withFullScreenPortal={false}
                withPortal={false}
              />,
              <br />,
              <textarea
                onChange={[Function]}
                placeholder="Add a note for your expense(optional)"
                value=""
              />,
              <button>
                AddExpense
              </button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "autoFocus": true,
                "onChange": [Function],
                "placeholder": "Description",
                "type": "text",
                "value": "Credit Card",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "onChange": [Function],
                "placeholder": "Amount",
                "type": "number",
                "value": "109.5",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "anchorDirection": "left",
                "appendToBody": false,
                "block": false,
                "calendarInfoPosition": "bottom",
                "customCloseIcon": null,
                "customInputIcon": null,
                "date": "1970-01-05T00:00:00.000Z",
                "dayAriaLabelFormat": undefined,
                "daySize": 39,
                "disableScroll": false,
                "disabled": false,
                "displayFormat": [Function],
                "enableOutsideDays": false,
                "firstDayOfWeek": null,
                "focused": false,
                "hideKeyboardShortcutsPanel": false,
                "horizontalMargin": 0,
                "horizontalMonthPadding": 13,
                "id": "date",
                "initialVisibleMonth": null,
                "inputIconPosition": "before",
                "isDayBlocked": [Function],
                "isDayHighlighted": [Function],
                "isOutsideRange": [Function],
                "isRTL": false,
                "keepFocusOnInput": false,
                "keepOpenOnDateSelect": false,
                "monthFormat": "MMMM YYYY",
                "navNext": null,
                "navPrev": null,
                "noBorder": false,
                "numberOfMonths": 1,
                "onClose": [Function],
                "onDateChange": [Function],
                "onFocusChange": [Function],
                "onNextMonthClick": [Function],
                "onPrevMonthClick": [Function],
                "openDirection": "down",
                "orientation": "horizontal",
                "phrases": Object {
                  "calendarLabel": "Calendar",
                  "chooseAvailableDate": [Function],
                  "clearDate": "Clear Date",
                  "closeDatePicker": "Close",
                  "dateIsSelected": [Function],
                  "dateIsUnavailable": [Function],
                  "enterKey": "Enter key",
                  "escape": "Escape key",
                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                  "homeEnd": "Home and end keys",
                  "jumpToNextMonth": "Move forward to switch to the next month.",
                  "jumpToPrevMonth": "Move backward to switch to the previous month.",
                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                  "keyboardShortcuts": "Keyboard Shortcuts",
                  "leftArrowRightArrow": "Right and left arrow keys",
                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                  "moveFocusByOneMonth": "Switch months.",
                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                  "openThisPanel": "Open this panel.",
                  "pageUpPageDown": "page up and page down keys",
                  "questionMark": "Question mark",
                  "returnFocusToInput": "Return to the date input field.",
                  "selectFocusedDate": "Select the date in focus.",
                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                  "upArrowDownArrow": "up and down arrow keys",
                },
                "placeholder": "Date",
                "readOnly": false,
                "regular": false,
                "renderCalendarDay": undefined,
                "renderCalendarInfo": null,
                "renderDayContents": null,
                "renderMonthElement": null,
                "renderMonthText": null,
                "reopenPickerOnClearDate": false,
                "required": false,
                "screenReaderInputMessage": "",
                "showClearDate": false,
                "showDefaultInputIcon": false,
                "small": false,
                "transitionDuration": undefined,
                "verticalHeight": null,
                "verticalSpacing": 22,
                "weekDayFormat": "dd",
                "withFullScreenPortal": false,
                "withPortal": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "onChange": [Function],
                "placeholder": "Add a note for your expense(optional)",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "AddExpense",
              },
              "ref": null,
              "rendered": "AddExpense",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
